[package]
name = "cxtweaker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clang = { version = "2.0.0", features = ["clang_10_0"] }
clap = { version = "4.0.32", features = ["derive", "color"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
colored = "2.1.0"
indicatif = "0.17.7"
regex = "1.10.5"